k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: swiftpay
  labels:
    name: swiftpay
    environment: production
    app: swiftpay
